--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -3,7 +3,7 @@
  *********************************************/
 
 .reveal section img {
-      border: 0.05;
+      border: 1px;
         box-shadow: none;
     }
 
