--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -26,7 +26,7 @@
 .reveal h5,
 .reveal h6 {
       margin: 0 0 20px 0;
-      font-family: Garamond, "League Gothic", Impact, sans-serif;
+      font-family: Impact, sans-serif;
       color: #FF8C00;
       font-weight: normal;
       line-height: 1.2;
