--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -26,6 +26,7 @@
 .reveal h5,
 .reveal h6 {
       margin: 0 0 20px 0;
+      font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
       color: #FF8C00;
       font-weight: normal;
       line-height: 1.2;
