--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -27,7 +27,6 @@
 .reveal h6 {
       margin: 0 0 20px 0;
       font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
-      color: #FF8C00;
       font-weight: normal;
       line-height: 1.2;
       letter-spacing: normal;
@@ -36,7 +35,9 @@
       word-wrap: break-word; }
 
 .reveal h1 {
-          font-size: 4.5em; }
+          font-size: 4.5em; 
+          font-weight: 500;
+      }
 
 .reveal h2 {
           font-size: 2.7em; }
